# rocketseat-python-desafio2

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8165ffcf4573_initial.py  dc405c689b67_initial_structure.py
src/: app.py
src/config/: app.py  constants.py  routes.py
src/models/: __init__.py  meals.py  user.py
src/models/utils/: type_decorator_uuid.py
src/modules/: __init__.py
src/modules/auth/: __init__.py  constants.py  login_manager.py  routes.py  schemas.py
src/modules/health/: __init__.py  constants.py  health.py  routes.py
src/modules/meals/: constants.py  routes.py  schemas.py  utils.py
src/modules/users/: constants.py  routes.py  schemas.py  utils.py
src/routes/: __init__.py
src/utils/: __init__.py  handle_http_errors.py  handle_validation_errors.py  http_response.py  response.py
