[project]
name = "rocketseat-python-desafio2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "Flask==2.3.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Login==0.6.2",
    "Werkzeug==2.3.0",
    "pymysql==1.1.0",
    "cryptography==41.0.7",
    "bcrypt==4.1.2",
    "python-dotenv>=1.2.2",
    "pydantic==2.13.4",
]
